user rate is visible in button list on the review presentation form + use resolve to load user/userToken/events for the app to be simpler

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -43,3 +43,7 @@ body {
     color: transparent;
     border: transparent;
 }
+
+.rated {
+    color: darkred;
+}
